# rust-blosc-src

./: .gitmodules  Cargo.toml  README.md  bindgen.sh  build.rs
.github/workflows/: ci.yml
src/: bindgen.rs  lib.rs
tests/: test.rs
