[package]
name = "blosc-src"
version = "0.2.2"
authors = ["Magnus Ulimoen <magnus@ulimoen.dev>"]
edition = "2021"
build = "build.rs"
links = "blosc"
license-file = "c-blosc/LICENSE.txt"
exclude = [
    "c-blosc/compat/**",
    "c-blosc/tests/**",
    "c-blosc/bench/**",
    "c-blosc/internal-complibs/zlib-1.2.13/contrib/**",
    "c-blosc/internal-complibs/zlib-1.2.13/examples/**",
    "c-blosc/internal-complibs/zlib-1.2.13/doc/**",
    "c-blosc/internal-complibs/zstd-1.5.5/legacy/**",
    "c-blosc/internal-complibs/lz4-1.9.4/**",
]
repository = "https://github.com/mulimoen/rust-blosc-src"
keywords = ["compression"]
categories = ["external-ffi-bindings", "compression"]
description = "FFI bindings for blosc-c"

[features]
lz4 = ["dep:lz4-sys"]
zstd = []
zlib = []

[build-dependencies]
cc = "1.0"

[dependencies]
lz4-sys = { version = "1.9.4", optional = true }
