[package]
name = "blosc-src"
version = "0.3.4"
authors = ["Magnus Ulimoen <magnus@ulimoen.dev>"]
edition = "2021"
build = "build.rs"
links = "blosc"
license-file = "c-blosc/LICENSE.txt"
exclude = [
    "c-blosc/compat/**",
    "c-blosc/tests/**",
    "c-blosc/bench/**",
    "c-blosc/internal-complibs/**",
]
repository = "https://github.com/mulimoen/rust-blosc-src"
keywords = ["compression"]
categories = ["external-ffi-bindings", "compression"]
description = "FFI bindings for blosc-c"
readme = "README.md"

[features]
zlib = ["dep:libz-sys"]
zstd = ["dep:zstd-sys"]
lz4 = ["dep:lz4-sys"]
snappy = ["dep:snappy_src"]

[build-dependencies]
cc = "1.0"

[dependencies]
libz-sys = { version = "1.1.12", optional = true, default-features = false, features = ["static", "libc"] }
zstd-sys = { version = "2.0.9", optional = true }
lz4-sys = { version = "1.9.4", optional = true }
snappy_src = { version = "0.2.2", optional = true }
